# FastCkpt

./: .gitignore  README.md  pyproject.toml
fastckpt/: llama_flash_attn_ckpt_monkey_patch.py  llama_flash_attn_monkey_patch.py
tests/: README.md  test_numerical_difference.py
